--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -20,16 +20,17 @@ oro:
                 integration.title: 'Integration'
                 connection.title: 'Connection Options'
                 advanced_settings.title: 'Advanced Settings'
-        methods:
-            credit_card.label: 'credit card'
-            tooltip: |
-                The verification number is a 3-digit number printed on the back of your card.
-                The American Express security code is a 4-digit number printed on the front of your card.
         credit_card:
             card_holder_name.label: "Cardholder's Name"
             cvv.label: 'CVV'
             expiration_date.label: 'Expiration Date'
             card_number.label: 'Credit Card Number'
+            whats_this: "What's this?"
+            tooltip: |
+                The verification number is a 3-digit
+                number printed on the back of your card.
+                The American Express security code is a 4-digit
+                number printed on the front of your card.
         sepa:
             iban.label: 'IBAN'
             bic.label: 'BIC'
